Maybe fixed issue with some images not showing.  GitHub pages doesn't like images leading with an underscore apparently.

--- a/components/_puzzle-board.scss
+++ b/components/_puzzle-board.scss
@@ -1,5 +1,5 @@
 .puzzleBoard {
-  background: url("img/puzzle/_Puzzle_solved.png") no-repeat center;
+  background: url("img/puzzle/Puzzle_solved.png") no-repeat center;
   border: 2px solid black;
   min-height: 589px;
   min-width: 879px;
