--- a/main.css
+++ b/main.css
@@ -475,7 +475,7 @@ body {
 
 /* Components */
 .puzzleBoard {
-  background: url("img/puzzle/_Puzzle_solved.png") no-repeat center;
+  background: url("img/puzzle/Puzzle_solved.png") no-repeat center;
   border: 2px solid black;
   min-height: 589px;
   min-width: 879px;
